# redis-client

./: .gitignore  .ralph-last-branch  AZURE_EXAMPLES.md  BENCHMARKING.md  CHANGELOG.md  CLUSTERING_IMPLEMENTATION_PLAN.md  CLUSTER_E2E_README.md  CLUSTER_SLOT_MAPPING.md  DEVELOPMENT.md  FILL_OPERATION_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE5_QUICKSTART.md  PHASE5_REVIEW.md  PHASE5_SUMMARY.md  README.md  TESTING_PHASE5.md  azure-redis-connect.py  benchmark.sh  cabal.project  cabal.project.local  client-docker.nix  cluster-compose.yml  default.nix  docker-compose.yml  e2eClusterDockerImg.nix  e2eDockerImg.nix  flake.nix  generate_slot_mapping.py  prd.json  progress.txt  quickstart-azure.sh  redis-client.cabal  redis-client.prof  redis.conf  result-2  result-3  result-4  (+10 more)
.githooks/: pre-commit
.github/instructions/: changes.instructions.md
.github/workflows/: copilot-setup-steps.yml  makefile.yml  runTests.yml  setup-agent.yml
app/: AppConfig.hs  ClusterCli.hs  ClusterFiller.hs  ClusterSetup.hs  ClusterTunnel.hs  FillHelpers.hs  Filler.hs  Main.hs  SlotMappingHelpers.hs
benchmarks/: run-comparison.sh  run-concurrency-tuning.sh
benchmarks/dotnet-rest/RedisBenchmark/: Program.cs  RedisBenchmark.csproj
benchmarks/dotnet-rest/RedisBenchmark/Properties/: launchSettings.json
benchmarks/dotnet/RedisBenchmark/: Program.cs  RedisBenchmark.csproj
benchmarks/haskell-rest/: haskell-rest-benchmark.cabal
benchmarks/haskell-rest/src/: Main.hs  ManualJson.hs  WarpOnly.hs
benchmarks/results/: COMPARISON.md  baseline-analysis.md  baseline.json  concurrency-tuning.json  final.json  generate-comparison.sh
benchmarks/results/cluster/: baseline-2026-02-12.json  baseline-analysis-2026-02-12.md  dotnet_get_list.json  dotnet_get_single.json  dotnet_mixed.json  dotnet_post.json  final-2026-02-12.json  final-analysis-2026-02-12.md  haskell_get_list.json  haskell_get_single.json  haskell_mixed.json  haskell_post.json
benchmarks/results/gc-http-json/: baseline.md  gc-applied.md  gc-tuning.md  gc_aggressive-nursery.json  gc_default.json  gc_large-nursery-no-idle.json  gc_match-main.json  gc_nonmoving-gc.json  http-framework.md  http_scotty.json  http_warp_only.json  json-serialization.md  json_aeson_cache_hit.json  json_aeson_cache_miss.json  json_builder_cache_hit.json  json_builder_cache_miss.json  optimization-decisions.md  summary.md
benchmarks/results/gc-http-json/gc-optimized/: haskell_get_list.json  haskell_get_single.json  haskell_mixed.json  haskell_mixed_rerun.json  haskell_post.json  haskell_post_rerun.json
benchmarks/results/standalone/: dotnet_get_list.json  dotnet_get_single.json  dotnet_mixed.json  dotnet_post.json  haskell_get_list.json  haskell_get_single.json  haskell_mixed.json  haskell_post.json
benchmarks/scripts/: mixed-bench.js  package-lock.json  package.json  post-bench.js  run-benchmarks.sh  run-cluster.sh  run-gc-tuning.sh  run-http-framework.sh  run-json-serialization.sh  run-standalone.sh
benchmarks/shared/: README.md  schema.sql  seed.py
certs/: redis-ca.crt  redis-ca.key  redis-server.crt  redis-server.key
data/: cluster_slot_mapping.txt
docker/: docker-compose.yml
docker-cluster/: docker-compose.yml  make_cluster.sh  redis-standalone.conf  redis1.conf  redis2.conf  redis3.conf  redis4.conf  redis5.conf
docker-cluster-host/: docker-compose.yml  make_cluster.sh  redis1.conf  redis2.conf  redis3.conf  redis4.conf  redis5.conf
docker/certs/: redis-ca.srl  redis.dh
docs/: AZURE_EXAMPLES.md  FILL_OPERATION_IMPLEMENTATION_PLAN.md
hask-redis-mux/: README.md  hask-redis-mux.cabal
lib/: Resp.hs
lib/client/: Client.hs
lib/client/Database/Redis/: Client.hs
lib/cluster/: Cluster.hs  ClusterCommandClient.hs  ClusterCommands.hs  ClusterSlotMapping.hs  ConnectionPool.hs  Connector.hs  MultiplexPool.hs  Multiplexer.hs  Redis.hs  StandaloneClient.hs
lib/cluster/Database/Redis/: Cluster.hs  Connector.hs  Standalone.hs
lib/cluster/Database/Redis/Cluster/: Client.hs  Commands.hs  ConnectionPool.hs  SlotMapping.hs
lib/cluster/Database/Redis/Internal/: MultiplexPool.hs  Multiplexer.hs
lib/crc16/: Crc16.hi  Crc16.hs  crc16.c
lib/crc16/Database/Redis/: Crc16.hs
lib/redis/: Redis.hs
lib/redis-command-client/: FromResp.hs  RedisCommandClient.hs  RedisError.hs
lib/redis-command-client/Database/Redis/: Command.hs  FromResp.hs  RedisError.hs
lib/redis/Database/: Redis.hs
lib/resp/: Resp.hs
lib/resp/Database/Redis/: Resp.hs
nix/: client-docker.nix  cluster-e2e-docker.nix  e2e-docker.nix  library-e2e-docker.nix
scripts/: azure-redis-connect.py  run-cluster-e2e-tests.sh  run-e2e-tests.sh  run-library-e2e-tests.sh
tasks/: hask-redis-mux-ergonomics.md  prd-cluster-performance.md  prd-fair-rest-benchmark.md  prd-rest-cache-benchmark.md  summary-cluster-performance-parity.md  summary-cluster-performance.md  summary-fair-rest-benchmark.md  summary-gc-http-json-optimization.md  summary-multiplexer-default.md  summary-rest-cache-benchmark.md  summary-separate-library-package.md
test/: ClusterCommandSpec.hs  ClusterE2E.hs  ClusterSpec.hs  E2E.hs  E2EHelpers.hs  FillHelpersSpec.hs  FromRespSpec.hs  LibraryE2E.hs  MultiplexPoolSpec.hs  MultiplexerSpec.hs  Spec.hs
test/ClusterE2E/: Basic.hs  Cli.hs  Fill.hs  TopologyRefresh.hs  Tunnel.hs  Utils.hs
test/LibraryE2E/: ApiTests.hs  ConcurrencyTests.hs  ConnectionPoolTests.hs  ResilienceTests.hs  StandaloneConcurrencyTests.hs  StandaloneTests.hs  TopologyTests.hs  Utils.hs
