cabal-version:      3.0
name:               redis-client
version:            0.5.0.0
synopsis:           A RESP protocol implementation and Redis client for learning Redis and Haskell
license:            MIT
license-file:       LICENSE
author:             Seth Speaks
maintainer:         sspeaks610@gmail.com
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md

-- ---------------------------------------------------------------------------
-- Common stanzas
-- ---------------------------------------------------------------------------

common defaults
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:    base >=4.19 && <5

common test-defaults
    import:           defaults
    build-depends:    hspec
    hs-source-dirs:   test

-- ---------------------------------------------------------------------------
-- Libraries
-- ---------------------------------------------------------------------------

library resp
    import:           defaults
    hs-source-dirs:   lib/resp
    exposed-modules:  Resp
    build-depends:    attoparsec
                    , bytestring
                    , containers

library client
    import:           defaults
    hs-source-dirs:   lib/client
    exposed-modules:  Client
    build-depends:    bytestring
                    , crypton-x509-system
                    , data-default-class
                    , dns
                    , iproute
                    , network
                    , tls

library crc16
    import:           defaults
    hs-source-dirs:   lib/crc16
    exposed-modules:  Crc16
    c-sources:        lib/crc16/crc16.c
    build-depends:    bytestring

library redis-command-client
    import:           defaults
    hs-source-dirs:   lib/redis-command-client
    exposed-modules:  RedisCommandClient
    build-depends:    attoparsec
                    , bytestring
                    , client
                    , mtl
                    , resp

library cluster
    import:           defaults
    hs-source-dirs:   lib/cluster
    exposed-modules:  Cluster
                    , ClusterCommandClient
                    , ClusterCommands
                    , ClusterSlotMapping
                    , ConnectionPool
                    , Connector
    build-depends:    bytestring
                    , client
                    , containers
                    , crc16
                    , file-embed
                    , mtl
                    , redis-command-client
                    , resp
                    , stm
                    , text
                    , time
                    , vector

library redis
    import:           defaults
    visibility:       public
    hs-source-dirs:   lib/redis
    exposed-modules:  Redis
    build-depends:    client
                    , cluster
                    , redis-command-client
                    , resp

-- ---------------------------------------------------------------------------
-- Test suites
-- ---------------------------------------------------------------------------

test-suite RespSpec
    import:           test-defaults
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    build-depends:    attoparsec
                    , bytestring
                    , containers
                    , redis-command-client
                    , resp

test-suite ClusterSpec
    import:           test-defaults
    type:             exitcode-stdio-1.0
    main-is:          ClusterSpec.hs
    build-depends:    bytestring
                    , cluster
                    , resp
                    , time

test-suite ClusterCommandSpec
    import:           test-defaults
    type:             exitcode-stdio-1.0
    main-is:          ClusterCommandSpec.hs
    build-depends:    bytestring
                    , cluster
                    , resp
                    , time

test-suite FillHelpersSpec
    import:           test-defaults
    type:             exitcode-stdio-1.0
    main-is:          FillHelpersSpec.hs
    other-modules:    FillHelpers
                    , Filler
    hs-source-dirs:   app
    build-depends:    bytestring
                    , client
                    , mtl
                    , redis-command-client

-- ---------------------------------------------------------------------------
-- Flags
-- ---------------------------------------------------------------------------

flag e2e
    description: Build end-to-end test executables (EndToEnd, ClusterEndToEnd, LibraryE2E)
    default:     False
    manual:      True

-- ---------------------------------------------------------------------------
-- Executables
-- ---------------------------------------------------------------------------

executable EndToEnd
    import:           defaults
    if !flag(e2e)
        buildable: False
    main-is:          E2E.hs
    hs-source-dirs:   test
                    , app
    other-modules:    E2EHelpers
                    , AppConfig
    build-depends:    attoparsec
                    , bytestring
                    , client
                    , directory
                    , filepath
                    , hspec
                    , mtl
                    , process
                    , redis-command-client
                    , resp

executable ClusterEndToEnd
    import:           defaults
    if !flag(e2e)
        buildable: False
    main-is:          ClusterE2E.hs
    hs-source-dirs:   test
                    , app
    other-modules:    ClusterE2E.Basic
                    , ClusterE2E.Cli
                    , ClusterE2E.Fill
                    , ClusterE2E.Tunnel
                    , ClusterE2E.TopologyRefresh
                    , ClusterE2E.Utils
                    , E2EHelpers
                    , SlotMappingHelpers
    build-depends:    async
                    , bytestring
                    , client
                    , cluster
                    , containers
                    , directory
                    , filepath
                    , hspec
                    , mtl
                    , process
                    , redis-command-client
                    , resp
                    , stm
                    , time
                    , vector

executable LibraryE2E
    import:           defaults
    if !flag(e2e)
        buildable: False
    ghc-options:      -threaded -rtsopts "-with-rtsopts=-N"
    main-is:          LibraryE2E.hs
    hs-source-dirs:   test
    other-modules:    LibraryE2E.Utils
                    , LibraryE2E.ConnectionPoolTests
                    , LibraryE2E.TopologyTests
                    , LibraryE2E.ResilienceTests
                    , LibraryE2E.ConcurrencyTests
                    , LibraryE2E.ApiTests
    build-depends:    async
                    , bytestring
                    , client
                    , cluster
                    , containers
                    , hspec
                    , mtl
                    , process
                    , redis-command-client
                    , resp
                    , stm
                    , time
                    , vector

executable redis-client
    import:           defaults
    ghc-options:      -O2 -threaded -rtsopts "-with-rtsopts=-N -H1024M -A128m -n8m -qb"
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:    AppConfig
                    , ClusterCli
                    , ClusterFiller
                    , ClusterSetup
                    , ClusterTunnel
                    , FillHelpers
                    , Filler
                    , SlotMappingHelpers
    build-depends:    attoparsec
                    , bytestring
                    , client
                    , cluster
                    , containers
                    , mtl
                    , network
                    , process
                    , random
                    , readline
                    , redis-command-client
                    , resp
                    , stm
                    , text
                    , vector
