cabal-version:      3.0
name:               redis-client
version:            0.5.0.0
synopsis:           A RESP protocol implementation and Redis client for learning Redis and Haskell
license:            MIT
license-file:       LICENSE
author:             Seth Speaks
maintainer:         sspeaks610@gmail.com
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md

-- ---------------------------------------------------------------------------
-- Common stanzas
-- ---------------------------------------------------------------------------

common defaults
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:    base >=4.19 && <5

common test-defaults
    import:           defaults
    build-depends:    hspec
    hs-source-dirs:   test

-- ---------------------------------------------------------------------------
-- Test suites
-- ---------------------------------------------------------------------------

test-suite FillHelpersSpec
    import:           test-defaults
    type:             exitcode-stdio-1.0
    main-is:          FillHelpersSpec.hs
    other-modules:    FillHelpers
                    , Filler
    hs-source-dirs:   app
    build-depends:    bytestring
                    , hask-redis-mux
                    , mtl

-- ---------------------------------------------------------------------------
-- Flags
-- ---------------------------------------------------------------------------

flag e2e
    description: Build end-to-end test executables (EndToEnd, ClusterEndToEnd, LibraryE2E)
    default:     False
    manual:      True

-- ---------------------------------------------------------------------------
-- Executables
-- ---------------------------------------------------------------------------

executable EndToEnd
    import:           defaults
    if !flag(e2e)
        buildable: False
    main-is:          E2E.hs
    hs-source-dirs:   test
                    , app
    other-modules:    E2EHelpers
                    , AppConfig
    build-depends:    attoparsec
                    , bytestring
                    , directory
                    , filepath
                    , hask-redis-mux
                    , hspec
                    , mtl
                    , process

executable ClusterEndToEnd
    import:           defaults
    if !flag(e2e)
        buildable: False
    main-is:          ClusterE2E.hs
    hs-source-dirs:   test
                    , app
    other-modules:    ClusterE2E.Basic
                    , ClusterE2E.Cli
                    , ClusterE2E.Fill
                    , ClusterE2E.Tunnel
                    , ClusterE2E.TopologyRefresh
                    , ClusterE2E.Utils
                    , E2EHelpers
                    , SlotMappingHelpers
    build-depends:    async
                    , bytestring
                    , containers
                    , directory
                    , filepath
                    , hask-redis-mux
                    , hspec
                    , mtl
                    , process
                    , stm
                    , time
                    , vector

executable LibraryE2E
    import:           defaults
    if !flag(e2e)
        buildable: False
    ghc-options:      -threaded -rtsopts "-with-rtsopts=-N"
    main-is:          LibraryE2E.hs
    hs-source-dirs:   test
    other-modules:    LibraryE2E.Utils
                    , LibraryE2E.ConnectionPoolTests
                    , LibraryE2E.TopologyTests
                    , LibraryE2E.ResilienceTests
                    , LibraryE2E.ConcurrencyTests
                    , LibraryE2E.ApiTests
    build-depends:    async
                    , bytestring
                    , containers
                    , hask-redis-mux
                    , hspec
                    , mtl
                    , process
                    , stm
                    , time
                    , vector

executable redis-client
    import:           defaults
    ghc-options:      -O2 -threaded -rtsopts "-with-rtsopts=-N -H1024M -A128m -n8m -qb"
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:    AppConfig
                    , ClusterCli
                    , ClusterFiller
                    , ClusterSetup
                    , ClusterTunnel
                    , FillHelpers
                    , Filler
                    , SlotMappingHelpers
    build-depends:    attoparsec
                    , bytestring
                    , containers
                    , hask-redis-mux
                    , mtl
                    , network
                    , process
                    , random
                    , readline
                    , stm
                    , vector
