cabal-version: 3.0
name:          haskell-rest-benchmark
version:       0.1.0.0
synopsis:      REST API benchmark using redis-client cache layer
license:       MIT
build-type:    Simple

executable haskell-rest-benchmark
    default-language: GHC2021
    ghc-options:      -Wall -O2 -threaded -rtsopts "-with-rtsopts=-N"
    hs-source-dirs:   src
    main-is:          Main.hs
    build-depends:
        base >=4.19 && <5
      , aeson
      , bytestring
      , http-types
      , redis-client:redis
      , scotty
      , sqlite-simple
      , text
      , wai
      , warp

executable haskell-rest-warp-only
    default-language: GHC2021
    ghc-options:      -Wall -O2 -threaded -rtsopts "-with-rtsopts=-N"
    hs-source-dirs:   src
    main-is:          WarpOnly.hs
    build-depends:
        base >=4.19 && <5
      , aeson
      , bytestring
      , http-types
      , redis-client:redis
      , sqlite-simple
      , text
      , wai
      , warp
